new endpoint to trigger batchjob
