# src/main/java/se/sundsvall/snailmail/api/SnailMailResource.java
@@ -3,14 +3,18 @@ package se.sundsvall.snailmail.api;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 import static org.springframework.http.ResponseEntity.ok;
 
+import jakarta.validation.Valid;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.zalando.problem.Problem;
 
+import se.sundsvall.dept44.common.validators.annotation.ValidUuid;
 import se.sundsvall.snailmail.api.model.SendSnailMailRequest;
 import se.sundsvall.snailmail.service.SnailMailService;
 
@@ -19,12 +23,13 @@ import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import jakarta.validation.Valid;
 
 @RestController
 @Validated
 @RequestMapping("/send/snailmail")
 @Tag(name = "SnailMailSender", description = "SnailMailSender")
+@ApiResponse(responseCode = "400", description = "Bad Request", content = @Content(schema = @Schema(implementation = Problem.class)))
+@ApiResponse(responseCode = "500", description = "Internal Server Error", content = @Content(schema = @Schema(implementation = Problem.class)))
 public class SnailMailResource {
 
 	private final SnailMailService snailMailService;
@@ -36,11 +41,18 @@ public class SnailMailResource {
 	@PostMapping(consumes = APPLICATION_JSON_VALUE)
 	@Operation(summary = "Create snailmail")
 	@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true)
-	@ApiResponse(responseCode = "400", description = "Bad Request", content = @Content(schema = @Schema(implementation = Problem.class)))
-	@ApiResponse(responseCode = "500", description = "Internal Server Error", content = @Content(schema = @Schema(implementation = Problem.class)))
-	ResponseEntity<Void> sendSnailMail(@Valid @RequestBody SendSnailMailRequest request) {
+	ResponseEntity<Void> sendSnailMail(@Valid @RequestBody final SendSnailMailRequest request) {
 
 		snailMailService.sendSnailMail(request);
 		return ok().build();
 	}
+
+	@PostMapping("batch/{batchId}")
+	@Operation(summary = "Send batch")
+	@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true)
+	ResponseEntity<Void> sendBatch(@ValidUuid @PathVariable final String batchId) {
+		snailMailService.sendBatch(batchId);
+		return ok().build();
+	}
+
 }
