# src/main/resources/openapi.yaml
@@ -1,13 +1,13 @@
 openapi: 3.0.1
 info:
   title: SnailMailSender
-  contact: {}
+  contact: { }
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
   version: "1.3"
 servers:
-  - url: http://localhost:8080
+  - url: http://localhost:53546
     description: Generated server url
 tags:
   - name: SnailMailSender
@@ -26,20 +26,47 @@ paths:
               $ref: '#/components/schemas/SendSnailMailRequest'
         required: true
       responses:
-        "200":
-          description: Successful Operation
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "200":
+          description: Successful Operation
+  /send/snailmail/batch/{batchId}:
+    post:
+      tags:
+        - SnailMailSender
+      summary: Send batch
+      operationId: sendBatch
+      parameters:
+        - name: batchId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "400":
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "200":
+          description: Successful Operation
   /api-docs:
     get:
       tags:
@@ -106,10 +133,6 @@ components:
     Problem:
       type: object
       properties:
-        title:
-          type: string
-        detail:
-          type: string
         instance:
           type: string
           format: uri
@@ -120,14 +143,18 @@ components:
           type: object
           additionalProperties:
             type: object
+        title:
+          type: string
+        detail:
+          type: string
         status:
           $ref: '#/components/schemas/StatusType'
     StatusType:
       type: object
       properties:
+        reasonPhrase:
+          type: string
         statusCode:
           type: integer
           format: int32
-        reasonPhrase:
-          type: string
-  securitySchemes: {}
+  securitySchemes: { }
